[gd_scene load_steps=3 format=3 uid="uid://bciwj2ekyrcmt"]

[ext_resource type="Script" path="res://menus/lobby.gd" id="1_e6wjc"]
[ext_resource type="Theme" uid="uid://d3mjqj5le7q7p" path="res://menus/button.tres" id="1_hy8pb"]

[node name="Lobby" type="Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme = ExtResource("1_hy8pb")
script = ExtResource("1_e6wjc")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0333333
anchor_right = 0.87066
anchor_bottom = 1.05
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="HBox"]
layout_mode = 2
text = "Lobby Name"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBox"]
layout_mode = 2

[node name="Mode" type="Label" parent="HBox"]
layout_mode = 2
text = "Mode Name"
vertical_alignment = 1

[node name="HBox2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.891493
anchor_top = 0.04375
anchor_right = 1.0
anchor_bottom = 0.95625
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PlayerCount" type="Label" parent="HBox2"]
layout_mode = 2
text = "5"
vertical_alignment = 1

[node name="Join" type="Button" parent="HBox2"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="HBox2/Join" to="." method="_on_join_pressed"]
